Remove lib contents and keep empty folder, and updated REAMD file